--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "method-override": "^3.0.0",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
