--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,8 @@
   "devDependencies": {
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": ">=14.20.1 <15"
   }
 }
